doc: manual split to a Users Guide and a Developers Guide

--- a/doc/src/developers-guide/title.tex
+++ b/doc/src/developers-guide/title.tex
@@ -14,7 +14,7 @@
 \begin{center}
 {\LARGE INET Framework for OMNeT++}\\
 \vspace{1em}
-{\large Manual}\\
+{\large Developers Guide}\\
 \end{center}
 \vspace{2em}
 \hrule
