--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -460,7 +460,7 @@
 \cleardoublepage
 
 \bibliographystyle{alpha}
-\bibliography{inet-manual}
+\bibliography{inet-users-guide}
 
 
 %% no need for the following since 'tocbibind' package
