--- a/doc/src/users-guide/ch-apps.tex
+++ b/doc/src/users-guide/ch-apps.tex
@@ -2,13 +2,483 @@
 \label{cha:apps}
 
 
-\ifdraft TODO
 \section{Overview}
 
 This chapter describes application models and traffic generators.
 
-Blah blah blah
-\fi
+\section{TCP applications}
+
+This sections describes the applications using the TCP protocol.
+Each application must implement the \nedtype{ITCPApp} module interface
+to ease configuring the \nedtype{StandardHost} module.
+
+The applications described here are all contained by the
+\nedtype{inet.applications.tcpapp} package. These applications use
+\msgtype{GenericAppMsg} objects to represent the data sent between the client
+and server. The client message contains the expected reply length, the
+processing delay, and a flag indicating that the connection should be closed
+after sending the reply. This way intelligence (behaviour specific to the
+modelled application, e.g. HTTP, SMB, database protocol) needs only to be
+present in the client, and the server model can be kept simple and dumb.
+
+
+\subsection{TCPBasicClientApp}
+
+Client for a generic request-response style protocol over TCP.
+May be used as a rough model of HTTP or FTP users.
+
+The model communicates with the server in sessions. During a session,
+the client opens a single TCP connection to the server, sends several
+requests (always waiting for the complete reply to arrive before
+sending a new request), and closes the connection.
+
+The server app should be \nedtype{TCPGenericSrvApp}; the model sends
+\msgtype{GenericAppMsg} messages.
+
+Example settings:
+
+FTP:
+
+\begin{inifile}
+numRequestsPerSession = exponential(3)
+requestLength = truncnormal(20,5)
+replyLength = exponential(1000000)
+\end{inifile}
+
+HTTP:
+
+\begin{inifile}
+numRequestsPerSession = 1 # HTTP 1.0
+numRequestsPerSession = exponential(5)  # HTTP 1.1, with keepalive
+requestLength = truncnormal(350,20)
+replyLength = exponential(2000)
+\end{inifile}
+
+Note that since most web pages contain images and may contain frames,
+applets etc, possibly from various servers, and browsers usually download
+these items in parallel to the main HTML document, this module cannot
+serve as a realistic web client.
+
+Also, with HTTP 1.0 it is the server that closes the connection after
+sending the response, while in this model it is the client.
+
+\subsection{TCPSinkApp}
+
+Accepts any number of incoming TCP connections, and discards whatever
+arrives on them.
+
+The module parameter \fpar{dataTransferMode} should be set the transfer mode in TCP layer.
+Its possible values (``bytecount'', ``object'', ``bytestream'') are described in ...
+
+\subsection{TCPGenericSrvApp}
+
+Generic server application for modelling TCP-based request-reply style
+protocols or applications.
+
+Requires message object preserving sendQueue/receiveQueue classes
+to be used with \nedtype{TCP} (that is, TCPMsgBasedSendQueue and TCPMsgBasedRcvQueue;
+TCPVirtualBytesSendQueue/RcvQueue are not good).
+
+The module accepts any number of incoming TCP connections, and expects
+to receive messages of class \msgtype{GenericAppMsg} on them. A message should
+contain how large the reply should be (number of bytes). \nedtype{TCPGenericSrvApp}
+will just change the length of the received message accordingly, and send
+back the same message object. The reply can be delayed by a constant time
+(replyDelay parameter).
+
+\subsection{TCPEchoApp}
+
+The \nedtype{TCPEchoApp} application accepts any number of incoming TCP
+connections, and sends back the messages that arrive on them, The lengths of the
+messages are multiplied by \fpar{echoFactor} before sending them back (echoFactor=1
+will result in sending back the same message unmodified.) The reply can also be
+delayed by a constant time (\fpar{echoDelay} parameter).
+
+When \nedtype{TCPEchoApp} receives data packets from TCP (and such, when they can be
+echoed) depends on the dataTransferMode setting.
+With "bytecount" and "bytestream", TCP passes up data to us
+as soon as a segment arrives, so it can be echoed immediately.
+With "object" mode, our local TCP reproduces the same
+messages that the sender app passed down to its TCP -- so if the sender
+app sent a single 100 MB message, it will be echoed only when all
+100 megabytes have arrived.
+
+\subsection{TCPSessionApp}
+
+Single-connection TCP application: it opens a connection, sends
+the given number of bytes, and closes. Sending may be one-off,
+or may be controlled by a "script" which is a series of
+(time, number of bytes) pairs. May act either as client or as server,
+and works with TCPVirtualBytesSendQueue/RcvQueue as sendQueue/receiveQueue
+setting for ~TCP.
+Compatible with both IPv4 (~IPv4) and ~IPv6.
+
+\subsubsection*{Opening the connection}
+
+Regarding the type of opening the connection, the application may
+be either a client or a server. When active=false, the application
+will listen on the given local localPort, and wait for an incoming connection.
+When active=true, the application will bind to given local localAddress:localPort,
+and connect to the connectAddress:connectPort. To use an ephemeral port
+as local port, set the localPort parameter to -1.
+
+Even when in server mode (active=false), the application will only
+serve one incoming connection. Further connect attempts will be
+refused by TCP (it will send RST) for lack of LISTENing connections.
+
+The time of opening the connection is in the tOpen parameter.
+
+\subsubsection*{Sending data}
+
+Regardless of the type of OPEN, the application can be made to send
+data. One way of specifying sending is via the tSend, sendBytes
+parameters, the other way is sendScript. With the former, sendBytes
+bytes will be sent at tSend. With sendScript, the format is
+"<time> <numBytes>;<time> <numBytes>;..."
+
+\subsubsection*{Closing the connection}
+
+The application will issue a TCP CLOSE at time tClose. If tClose=-1, no
+CLOSE will be issued.
+
+
+
+\subsection{TelnetApp}
+
+Models Telnet sessions with a specific user behaviour.
+The server app should be \nedtype{TCPGenericSrvApp}.
+
+In this model the client repeats the following activity
+between \fpar{startTime} and \fpar{stopTime}:
+
+\begin{enumerate}
+\item opens a telnet connection
+\item sends \fpar{numCommands} commands. The command is \fpar{commandLength} bytes
+      long. The command is transmitted as entered by the user character by character,
+      there is \fpar{keyPressDelay} time between the characters. The server echoes
+      each character. When the last character of the command is sent (new line),
+      the server responds with a \fpar{commandOutputLength} bytes long message.
+      The user waits \fpar{thinkTime} interval between the commands.
+\item closes the connection and waits \fpar{idleInterval} seconds
+\item if the connection is broken it is noticed after \fpar{reconnectInterval}
+      and the connection is reopened
+\end{enumerate}
+
+Each parameter in the above description is ``volatile'', so you can
+use distributions to emulate random behaviour.
+
+Additional parameters:
+addresses,ports
+dataTransferMode
+
+\begin{note}
+This module emulates a very specific user behaviour, and as such,
+it should be viewed as an example rather than a generic Telnet model.
+If you want to model realistic Telnet traffic, you are encouraged
+to gather statistics from packet traces on a real network, and
+write your model accordingly.
+\end{note}
+
+\subsection{TCPSrvHostApp}
+
+This module hosts TCP-based server applications. It dynamically creates
+and launches a new "thread" object for each incoming connection.
+
+Server threads should be subclassed from the \cppclass{TCPServerThreadBase}
+C++ class, registered in the C++ code using the Register\_Class() macro,
+and the class name should be specified in the serverThreadClass
+parameter of \nedtype{TCPSrvHostApp}. The thread object will receive events
+via a callback interface (methods like established(), dataArrived(),
+peerClosed(), timerExpired()), and can send packets via TCPSocket's send()
+method.
+
+Example server thread class: \cppclass{TCPGenericSrvThread}.
+
+\begin{important}
+Before you try to use this module, make sure you actually need it!
+In most cases, \nedtype{TCPGenericSrvApp} and \msgtype{GenericAppMsg} will be completely
+enough, and they are a lot easier to handle. You'll want to subclass your
+client from \cppclass{TCPGenericCliAppBase} then; check \nedtype{TelnetApp} and
+\nedtype{TCPBasicClientApp} for examples.
+\end{important}
+
+
+\section{UDP applications}
+
+All UDP applications should be derived from the \nedtype{IUDPApp} module interface,
+so that the application of \nedtype{StandardHost} could be configured without changing its NED file.
+
+The following applications are implemented in INET:
+\begin{itemize}
+\item \nedtype{UDPBasicApp} sends UDP packets to a given IP address at a given interval
+\item \nedtype{UDPBasicBurst} sends UDP packets to the given IP address(es) in bursts, or acts as a packet sink.
+\item \nedtype{UDPEchoApp} similar to \nedtype{UDPBasicApp}, but it sends back the packet after reception
+\item \nedtype{UDPSink} consumes and prints packets received from the \nedtype{UDP} module
+\item \nedtype{UDPVideoStreamCli},\nedtype{UDPVideoStreamSvr} simulates UDP streaming
+\end{itemize}
+
+The next sections describe these applications in details.
+
+\subsection{UDPBasicApp}
+
+The \nedtype{UDPBasicApp} sends UDP packets to a the IP addresses given in the
+\fpar{destAddresses} parameter. The application sends a message to one of the
+targets in each \fpar{sendInterval} interval. The interval between message and
+the message length can be given as a random variable. Before the packet is
+sent, it is emitted in the \fsignal{sentPk} signal.
+
+The application simply prints the received UDP datagrams. The \fsignal{rcvdPk}
+signal can be used to detect the received packets.
+
+The number of sent and received messages are saved as scalars at the end of the
+simulation.
+
+% could be a simple packet generator without the ability to receive packets?
+
+\subsection{UDPSink}
+
+This module binds an UDP socket to a given local port, and prints the
+source and destination and the length of each received packet.
+
+% TODO does not accept broadcast messages
+
+\subsection{UDPEchoApp}
+
+Similar to \nedtype{UDPBasicApp}, but it sends back the packet after reception.
+It accepts only packets with \msgtype{UDPEchoAppMsg} type, i.e. packets that
+are generated by another \nedtype{UDPEchoApp}.
+
+When an echo response received, it emits an \fsignal{roundTripTime} signal.
+
+\subsection{UDPVideoStreamCli}
+
+This module is a video streaming client. It send one ``video streaming request'' to
+the server at time \fpar{startTime} and receives stream from \nedtype{UDPVideoStreamSvr}.
+
+The received packets are emitted by the \fsignal{rcvdPk} signal.
+
+\subsection{UDPVideoStreamSvr}
+
+This is the video stream server to be used with \nedtype{UDPVideoStreamCli}.
+
+The server will wait for incoming "video streaming requests".
+When a request arrives, it draws a random video stream size
+using the \fpar{videoSize} parameter, and starts streaming to the client.
+During streaming, it will send UDP packets of size \fpar{packetLen} at every
+\fpar{sendInterval}, until \fpar{videoSize} is reached. The parameters \fpar{packetLen}
+and \fpar{sendInterval} can be set to constant values to create CBR traffic,
+or to random values (e.g. sendInterval=uniform(1e-6, 1.01e-6)) to
+accomodate jitter.
+
+The server can serve several clients, and several streams per client.
+
+% FIXME why streamVector? VideoStreamData could be deleted immediately after last byte sent
+% TODO this is video-on-demand, support multicast/broadcast video streaming too
+
+\subsection{UDPBasicBurst}
+
+Sends UDP packets to the given IP address(es) in bursts, or acts as a
+packet sink. Compatible with both IPv4 and IPv6.
+
+\subsubsection*{Addressing}
+
+The \fpar{destAddresses} parameter can contain zero, one or more destination
+addresses, separated by spaces. If there is no destination address given,
+the module will act as packet sink. If there are more than one addresses,
+one of them is randomly chosen, either for the whole simulation run,
+or for each burst, or for each packet, depending on the value of the
+\fpar{chooseDestAddrMode} parameter. The \fpar{destAddrRNG} parameter controls which
+(local) RNG is used for randomized address selection.
+The own addresses will be ignored.
+
+An address may be given in the dotted decimal notation, or with the module
+name. (The \cppclass{L3AddressResolver} class is used to resolve the address.)
+You can use the "Broadcast" string as address for sending broadcast messages.
+
+INET also defines several NED functions that can be useful:
+\begin{itemize}
+\item[-] moduleListByPath("pattern",...): \\
+         Returns a space-separated list of the modulenames.
+         All modules whole getFullPath() matches one of the pattern parameters will get included.
+         The patterns may contain wilcards in the same syntax as in ini files.
+         See cTopology::extractByModulePath() function
+         example: destaddresses = moduleListByPath("**.host[*]", "**.fixhost[*]")
+\item[-] moduleListByNedType("fully.qualified.ned.type",...): \\
+         Returns a space-separated list of the modulenames with the given NED type(s).
+         All modules whose getNedTypeName() is listed in the given parameters will get included.
+         The NED type name is fully qualified.
+         See cTopology::extractByNedTypeName() function
+         example: destaddresses = moduleListByNedType("inet.nodes.inet.StandardHost")
+\end{itemize}
+
+The peer can be UDPSink or another UDPBasicBurst.
+
+\subsubsection*{Bursts}
+
+The first burst starts at \fpar{startTime}. Bursts start by immediately sending
+a packet; subsequent packets are sent at \fpar{sendInterval} intervals. The
+sendInterval parameter can be a random value, e.g. exponential(10ms).
+A constant interval with jitter can be specified as 1s+uniform(-0.01s,0.01s)
+or uniform(0.99s,1.01s). The length of the burst is controlled by the
+\fpar{burstDuration} parameter. (Note that if \fpar{sendInterval} is greater than
+\fpar{burstDuration}, the burst will consist of one packet only.) The time between
+burst is the \fpar{sleepDuration} parameter; this can be zero (zero is not
+allowed for \fpar{sendInterval}.) The zero \fpar{burstDuration} is interpreted as infinity.
+
+\subsubsection*{Packets}
+
+Packet length is controlled by the \fpar{messageLength} parameter.
+
+The module adds two parameters to packets before sending:
+\begin{itemize}
+\item[-] sourceID: source module ID
+\item[-] msgId: incremented by 1 after send any packet.
+\end{itemize}
+When received packet has this parameters, the module checks the order of received packets.
+
+\subsubsection*{Operation as sink}
+
+When \fpar{destAddresses} parameter is empty, the module receives packets and makes statistics only.
+
+\subsubsection*{Statistics}
+
+Statistics are collected on outgoing packets:
+\begin{itemize}
+\item[-] sentPk: packet object
+\end{itemize}
+
+Statistics are collected on incoming packets:
+\begin{itemize}
+\item[-] outOfOrderPk: statistics of out of order packets.
+       The packet is out of order, when has msgId and sourceId parameters and module
+       received bigger msgId from same sourceID.
+\item[-] dropPk: statistics of dropped packets.
+       The packet is dropped when not out-of-order packet and delay time is larger than
+       delayLimit parameter. The delayLimit=0 is infinity.
+\item[-] rcvdPk: statistics of not dropped, not out-of-order packets.
+\item[-] endToEndDelay: end to end delay statistics of not dropped, not out-of-order packets.
+\end{itemize}
+
+
+\section{SCTP applications}
+
+TODO
+
+
+\section{IPv4/IPv6 traffic generators}
+
+The applications described in this section use the services of the network
+layer only, they do not need transport layer protocols.
+They can be used with both IPv4 and IPv6.
+
+\nedtype{IIPvXTraffixGenerator} (prototype) sends IP or IPv6 datagrams to the
+given address at the given \fpar{sendInterval}.
+The \fpar{sendInterval} parameter can be a constant or a random value (e.g. exponential(1)).
+If the \fpar{destAddresses} parameter contains more than one address, one
+of them is randomly for each packet. An address may be given in the
+dotted decimal notation (or, for IPv6, in the usual notation with colons),
+or with the module name. (The \cppclass{L3AddressResolver} class is used to resolve
+the address.) To disable the model, set destAddresses to "".
+
+The \nedtype{IPvXTrafGen} sends messages with length \fpar{packetLength}.
+The sent packet is emitted in the \fsignal{sentPk} signal.
+The length of the sent packets can be recorded as scalars and vectors.
+
+The \nedtype{IPvXTrafSink} can be used as a receiver of the packets
+generated by the traffic generator. This module emits the packet
+in the \fsignal{rcvdPacket} signal and drops it. The \ttt{rcvdPkBytes}
+and \ttt{endToEndDelay} statistics are generated from this signal.
+
+The \nedtype{IPvXTrafGen} can also be the peer of the traffic generators;
+it handles the received packets exactly like \nedtype{IPvXTrafSink}.
+
+\section{The PingApp application}
+
+The \nedtype{PingApp} application
+generates ping requests and calculates the packet loss and round trip
+parameters of the replies.
+
+Start/stop time, sendInterval etc. can be specified via parameters. An address
+may be given in the dotted decimal notation (or, for IPv6, in the usual
+notation with colons), or with the module name.
+(The \cppclass{L3AddressResolver} class is used to resolve the address.)
+To disable send, specify empty destAddr.
+
+Every ping request is sent out with a sequence number, and replies are
+expected to arrive in the same order. Whenever there's a jump in the
+in the received ping responses' sequence number (e.g. 1, 2, 3, 5), then
+the missing pings (number 4 in this example) is counted as lost.
+Then if it still arrives later (that is, a reply with a sequence number
+smaller than the largest one received so far) it will be counted as
+out-of-sequence arrival, and at the same time the number of losses is
+decremented. (It is assumed that the packet arrived was counted earlier as a loss,
+which is true if there are no duplicate packets.)
+
+Uses \msgtype{PingPayload} as payload for the ICMP(v6) Echo Request/Reply packets.
+
+\subsection*{Parameters}
+
+\begin{itemize}
+  \item \fpar{destAddr}: destination address
+  \item \fpar{srcAddr}: source address (useful with multi-homing)
+  \item \fpar{packetSize}: of ping payload, in bytes (default is 56)
+  \item \fpar{sendInterval}: time to wait between pings (can be random, default is 1s)
+  \item \fpar{hopLimit}: TTL or hopLimit for IP packets (default is 32)
+  \item \fpar{count}: stop after \fpar{count} ping request, 0 means continuously
+  \item \fpar{startTime}: send first ping request at \fpar{startTime}
+  \item \fpar{stopTime}: time of finish sending, 0 means forever
+  \item \fpar{printPing}: dump on stdout (default is \fkeyword{false})
+\end{itemize}
+
+\subsection*{Signals and Statistics}
+
+\begin{itemize}
+  \item \fsignal{rtt} value of the round trip time
+  \item \fsignal{numLost} number of lost packets
+  \item \fsignal{outOfOrderArrivals} number of packets arrived out-of-order
+  \item \fsignal{pingTxSeq} sequence number of the sent ping request
+  \item \fsignal{pingRxSeq} sequence number of the received ping response
+\end{itemize}
+
+% FIXME seqNo should be part of ICMPMessage
+
+
+\section{Ethernet applications}
+
+The \nedtype{inet.applications.ethernet} package contains modules
+for a simple client-server application. The \nedtype{EtherAppCli} is a simple
+traffic generator that peridically sends \msgtype{EtherAppReq} messages
+whose length can be configured. destAddress, startTime,waitType, reqLength, respLength
+
+The server component of the model (\nedtype{EtherAppSrv}) responds with a
+\msgtype{EtherAppResp} message of the requested length. If the response does
+not fit into one ethernet frame, the client receives the data in multiple
+chunks.
+
+% FIXME reqLength>1500 causes an error in the LLC module
+% FIXME numFrames field of EtherAppRes is not used
+% FIXME server always sends 1497 byte chunks, it should depend on the framing (1497 is for LLC)
+% FIXME if registerSAP is false (default), the and EtherLLC used, then the client won't receive messages (auto config?)
+% FIXME Ieee802Nic -> EthernetInterface in the NED comment
+
+Both applications have a \fpar{registerSAP} boolean parameter.
+This parameter should be set to \ttt{true} if the application is connected
+to the \nedtype{EtherLLC} module which requires registration of the SAP
+before sending frames.
+
+Both applications collects the following statistics: sentPkBytes, rcvdPkBytes,
+endToEndDelay.
+
+The client and server application works with any model that accepts
+Ieee802Ctrl control info on the packets (e.g. the 802.11 model).
+The applications should be connected directly to the \nedtype{EtherLLC}
+or an EthernetInterface NIC module.
+
+The model also contains a host component that groups the applications
+and the LLC and MAC components together (\nedtype{EtherHost}). This node does
+not contain higher layer protocols, it generates Ethernet traffic directly.
+By default it is configured to use half duplex MAC (CSMA/CD).
+
 
 
 %%% Local Variables:
