--- a/src/inet/common/ChangeLog
+++ b/src/inet/common/ChangeLog
@@ -1,5 +1,10 @@
 ====== inet-3.x ======
 
+2018-03-21  Rudolf Hornig
+
+	packet printer: made it compatible with the new message printer API
+	in OMNeT++ 5.3
+
 2017-12-22  ------ inet-3.6.3 released ------
 
 2017-09-26  Zoltan Bojthe
