--- a/src/inet/networklayer/ipv4/ChangeLog
+++ b/src/inet/networklayer/ipv4/ChangeLog
@@ -1,5 +1,9 @@
 ====== inet-3.x ======
 
+2018-01-12  Zoltan Bojthe
+
+	Changed some module parameters from double to int.
+
 2017-12-22  ------ inet-3.6.3 released ------
 
 2017-10-02  ------ inet-3.6.2 released ------
