--- a/src/inet/transportlayer/sctp/ChangeLog
+++ b/src/inet/transportlayer/sctp/ChangeLog
@@ -1,7 +1,10 @@
 ====== inet-3.x ======
 
-2017-12-22  ------ inet-3.6.3 released ------
+2018-01-12  Zoltan Bojthe
 
+	Changed some module parameters from double to int.
+
+2017-12-22  ------ inet-3.6.3 released ------
 
 2017-12-21  Irene Ruengeler
 
