--- a/src/inet/transportlayer/tcp_lwip/ChangeLog
+++ b/src/inet/transportlayer/tcp_lwip/ChangeLog
@@ -1,5 +1,11 @@
 ====== inet-3.x ======
 
+2018-01-09  TOROK Attila
+
+	tcp/lwip: Replace the log predicate macros with constexpr functions.
+	Just to silence a plethora of annoying warnings. Functionally they should
+	be identical.
+
 2017-12-22  ------ inet-3.6.3 released ------
 
 2017-10-02  ------ inet-3.6.2 released ------
